mudei o nome do site

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilomenu/stylemenu.css">
     <link rel="stylesheet" href="">
-    <title> Educação Geral </title>
+    <title> Mãe tirei 10 </title>
 </head>
 
 <body>
 
     <nav>
-        <h2> Educação Geral</h2>
+        <h2> Mãe tirei 10 </h2>
 
         <ul class="menu">
             <li><a href="index.html"> Inicio </a></li>
