Mudando o nome do inicio do site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav>
-        <h2> Mãe tirei 10 </h2>
+        <h2> Educação Geral </h2>
 
         <ul class="menu">
             <li><a href="index.html"> Inicio </a></li>
