inserindo o nome do titulo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilomenu/stylemenu.css">
     <link rel="stylesheet" href="">
-    <title> Mãe tirei 10 </title>
+    <title> Educação Geral </title>
 </head>
 
 <body>
