--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <li><a href="index.html"> Inicio </a></li>
             <li><a href="provaenem.html"> Provas do Enem </a></li>
             <li><a href="#"> Provas de Concurso Público </a></li>
-            
-          
-            <li><a href="#">Contatos </a>  </li>
+            <li><a href="contato.html">Contatos </a>  </li>
         </ul>
 
         <!--È uma LIsta que não vai ter nada -->
