--- a/contato.html
+++ b/contato.html
@@ -114,10 +114,10 @@
 
     <footer>
         
-        <h2> <a href="https://www.linkedin.com/in/murilo-gaspar-6b1270126"> <img src="img/Linkedin.png"> Linkedin  </a> </h2>
-        <h2> <a href="https://github.com/murilogaspar"> <img src="img/Github.png">  GitHub    </a> </h2>
-        <h2> <a href="mailto:murilo:murilogaspar10@gmail.coom"> <img src="img/gmail.png"> Gmail     </a> </h2>
-        <h2> <a href="https://t.me/murilogaspar1990"> <img src="img/telegram.png"> Telegram   </a> </h2>
+        <h2> <a href="https://www.linkedin.com/in/murilo-gaspar-6b1270126"> <img src="img/Linkedin.png">  </a> </h2>
+        <h2> <a href="https://github.com/murilogaspar"> <img src="img/Github.png">  </a> </h2>
+        <h2> <a href="mailto:murilo:murilogaspar10@gmail.coom"> <img src="img/gmail.png"> </a> </h2>
+        <h2> <a href="https://t.me/murilogaspar1990"> <img src="img/telegram.png">  </a> </h2>
  
 
     </footer>
