correção de bug  no video

--- a/index.html
+++ b/index.html
@@ -71,17 +71,11 @@
 
     <p>
 
-            Apresentação de como Interagir com o Site <br> é dividido no menu Prova do Enem aparece 
+            Apresentação de como interagir com o site um breve resumo <br> sobre como procurar por algum assunto
             
-            apertando <br> nesse campo as provas dos <br> ultimos 5 anos aparecem separados em cores, 
-
-            ainda no menu aparece <br> um campo <br> chamado Prova de Concurso Público <br> ainda está em construção
-
-            mas ainda no menu aparece Mais informações <br> sobre o Site onde mostra <br> tudo que está em desenvolvimento 
-
-            e sobre a ideia do site , <br> para contato com o desenvolvedor do site você só <br> precisa aperta com o mouse ou 
-
-            seu dedo em uma das <br> redes sociais e entrará <br> em contato direto com o responsável pelo site
+            <br> clicando no campo de cima expande o menu e aparece a navegação <br> 
+            
+            e assim poderá procurar por provas ou saber um pouco mais sobre a página web 
 
     </p>
 
