inserindo na pagina de contato libras

--- a/contato.html
+++ b/contato.html
@@ -112,6 +112,18 @@
 
     </div>
 
+    <div vw class="enabled">
+        
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper" ></div>
+        </div>
+      </div>
+   
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
     <footer>
         
         <h2> <a href="https://www.linkedin.com/in/murilo-gaspar-6b1270126"> <img src="img/Linkedin.png">  </a> </h2>
