--- a/contato.html
+++ b/contato.html
@@ -131,7 +131,8 @@
         <h2> <a href="https://www.linkedin.com/in/murilo-gaspar-6b1270126"> <img src="img/Linkedin.png">  </a> </h2>
         <h2> <a href="https://github.com/murilogaspar"> <img src="img/Github.png">  </a> </h2>
         <h2> <a href="mailto:murilo:murilogaspar10@gmail.coom"> <img src="img/gmail.png"> </a> </h2>
-        <h2> <a href="https://t.me/murilogaspar1990"> <img src="img/telegram.png">  </a> </h2>
+        <h2> <a href="https://chat.whatsapp.com/LsDduE5ApqX7xudPHPNFeB" target="_blank" alt="Meu Whatsapp"><img src="img/whatsapp.png"></a>   </h2> 
+
  
 
     </footer>
